Prevent search toolbar from jumping when notification numbers change

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -702,12 +702,16 @@ div.hopscotch-bubble {
             color: @color;
         }
     }
+    #io-ox-notifications-icon {
+        min-width: 4.5em;//prevent jumping of searchtool if number changes
+        text-align: center;
+    }
 
     .launcher a.notifications-icon {
 
         height: 40px;
         display: inline-block;
-        padding: 0 12px;
+        padding: 0;
 
         .badge {
 
